force-app/main/default/objects/AAR_Criteria__c/AAR_Criteria__c.object-meta.xml
<CustomObject>
    <description
  >Evaluation criteria definitions used by evaluators when assessing AAR submissions (e.g. Research Impact, Training Output, Knowledge Translation).</description>
    <label>AAR Criterion</label>
    <nameField>
        <label>Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AAR Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>