force-app/main/default/objects/AAR_Criteria__c/fields/UHN_AAR__c.field-meta.xml
<CustomField>
    <fullName>UHN_AAR__c</fullName>
    <label>AAR</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>AAR Criteria</relationshipLabel>
    <relationshipName>AAR_Criteria</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>